--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ a.btn:hover {
 
 .fleft {
 	float: left;
-	width: auto !important;
+	width: 219 !important;
 	margin-right: 20px;
 	margin-bottom: 0px;
 	margin-top: 1px;
